# payment_transaction

./: .env_example  .gitignore  Makefile  README.md  constants.py  dagster.yaml  docker-compose.yml  fetch_data.py  payment_description.json  pyproject.toml  transform_pyspark.py
.github/workflows/: ci.yml
dagster_pipeline/: definitions.py
dagster_pipeline/assets/: __init__.py  ingestion.py  transformation.py
src/: constants.py  fetch_data.py  transform_pyspark.py
terraform/: main.tf  variables.tf
