[project]
name = "payment-transaction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-core>=2.30.0",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-storage>=3.10.1",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
]
