[project]
name = "payment-transaction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.13.1",
    "dagster-webserver>=1.13.1",
    "db-dtypes>=1.4.4",
    "google-api-core>=2.30.0",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-storage>=3.10.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "black>=25.1.0",
    "ruff>=0.11.0",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.dagster]
module_name = "dagster_pipeline.definitions"
